# zimShadowControl

./: .gitignore  .ruff.toml  CONTRIBUTING.md  LICENSE  README.de.md  README.md  RELEASENOTES.md  hacs.json  pyproject.toml  pytest.ini  renovate.json  requirements.txt  requirements_dev.txt  requirements_test.txt
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  RELEASENOTES_FOOTER.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: integrationtest.yml  lint.yml  release.yml  unittest.yml  validate.yml
config/: configuration.yaml
config/automations/: handle_window_states_sc_dummy.yaml
config/input_boolean/: reed_contacts_sc_dummy.yaml
config/input_button/: sc_configuration.yaml
config/input_number/: beschattungskonfiguration.yaml  dummy_cover_position.yaml  handle_window_states_sc_dummy.yaml  lock_positions_sc_dummy.yaml  sc_configuration.yaml
config/input_select/: sc_configuration.yaml
config/knx/: all.yaml  development.yaml
config/shadow_control/: input_boolean.yaml  input_number.yaml  input_select.yaml
config/template/: beschattungskonfiguration.yaml  dummy_cover.yaml  fensterstatus.yaml
custom_components/shadow_control/: __init__.py  adaptive_brightness.py  binary_sensor.py  button.py  config_flow.py  config_validation.py  const.py  manifest.json  number.py  select.py  sensor.py  services.yaml  switch.py  time.py
scripts/: develop  installConfigs.sh  setup
tests/: conftest.py
tests/integration/: conftest.py  test_adaptive_brightness.py  test_angle_calculation.py  test_knx_uf_issues_01.py  (+12 more)
(+57 files in other folders)
