[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shadow-control"
version = "0.1.0"
description = "Shadow Control Home Assistant Integration"
readme = "README.md"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.pycharm]
# Tell PyCharm about test requirements
test_requirements = ["requirements_test.txt"]

[tool.coverage.run]
disable_warnings = ["module-not-measured"]
